fix (navbar): fixed the overlap with navbar and fixed the burger menu position to take up full width

--- a/assets/css/nav.component.css
+++ b/assets/css/nav.component.css
@@ -141,9 +141,9 @@ body {
     
     .navbar-menu {
         position: fixed;
-        top: 100px;
+        top: 7.9rem;
         left: 100%;
-        width: 80%;
+        width: 100%;
         height: calc(100vh - 80px);
         background: rgba(30, 15, 15, 0.98);
         flex-direction: column;
